# cellarbrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cellarbrain.toml  pyproject.toml
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: cellarbrain-devsetup.agent.md  cellarbrain-explorer.agent.md  cellarbrain-extended-smoketest.agent.md  cellarbrain-market.agent.md  cellarbrain-price-tracker.agent.md  cellarbrain-qa.agent.md  cellarbrain-research.agent.md  cellarbrain-search-tester.agent.md  cellarbrain-shopresearch.agent.md  cellarbrain-shopscanner.agent.md  cellarbrain-smoketest.agent.md  cellarbrain-tracked.agent.md  cellarbrain-trainer.agent.md  cellarbrain.agent.md
.github/instructions/: memory-management.instructions.md  smoke-helpers.instructions.md
.github/prompts/: analyze.prompt.md  ci-fast.prompt.md  ci.prompt.md  commit.prompt.md  dream.prompt.md  fix-issues.prompt.md  implement.prompt.md  new-branch.prompt.md  release.prompt.md  smoke-test.prompt.md  train-model.prompt.md  validate-alpha.prompt.md
.github/tools/: sync-skills.py
.github/workflows/: ci.yml  publish.yml
.openclaw/: README.md
.openclaw/cellar-gaps/: SKILL.md
.openclaw/cellar-qa/: SKILL.md
.openclaw/cellarbrain/: SKILL.md
.openclaw/consumption-velocity/: SKILL.md
.openclaw/dinner-party/: SKILL.md
.openclaw/drinking-window/: SKILL.md
.openclaw/food-pairing/: SKILL.md
.openclaw/hilfe/: SKILL.md
.openclaw/manage/: SKILL.md
.openclaw/market-research/: SKILL.md
.openclaw/price-tracking/: SKILL.md
.openclaw/promotion-analysis/: SKILL.md
.openclaw/research-completeness/: SKILL.md
.openclaw/shop-extraction/: SKILL.md
.openclaw/tonight/: SKILL.md
.openclaw/tracked-research/: SKILL.md
.openclaw/wine-info/: SKILL.md
.openclaw/wine-research/: SKILL.md
docs/: agent-architecture.md  architecture.md  cli-reference.md  computed-properties.md  dossier-format.md  dossier-system.md  entity-model.md  error-reference.md  etl-pipeline.md  field-mapping.md  food-pairing.md  index.md  mcp-tools.md  prompt-book-de.md  query-layer.md  settings-reference.md  setup-guide.md  upgrading.md
docs/decisions/: 001-natural-key-id-stabilisation.md  002-soft-delete-tombstones.md  003-dossier-ownership-split.md  004-dual-connection-model.md  005-year-partitioned-prices.md  006-frozen-dataclass-settings.md  007-tracked-wine-identity.md  008-thin-mcp-tools.md  009-slug-based-wine-id-stabilisation.md  010-structured-observability.md
installation-agent/.github/: copilot-instructions.md
models/sommelier/: build_catalogue.py  build_pairings.py  evaluate_model.py  food_catalogue.parquet  pairing_dataset.parquet
setup/: 01-local-development.md  02-building-and-testing.md  04-installation-and-running.md  07-fresh-install-validation-prompt.md  README.md  com.cellarbrain.ingest.plist.template
setup/_archive/: 03-publishing.md  03a-pypi-trusted-publishing.md  04-installation-and-running.md  05-debugging-and-monitoring.md  06-openclaw-integration.md
setup/configuration/: overview.md
setup/development/: building.md  local-setup.md  project-structure.md  testing.md
setup/getting-started/: installation.md  prerequisites.md  quick-start.md
setup/modules/: agent-skills.md  cli.md  dashboard.md  email-ingest.md  etl.md  ios-prompt-book.md  mcp-server.md  sommelier.md
setup/operations/: health-monitoring.md  logging.md  mcp-testing.md  observability.md  scheduled-digest.md  upgrading.md  vscode-debugging.md
setup/publishing/: homebrew.md  pypi.md  release-process.md
setup/reference/: fresh-install-validation.md  launchd-template.md
src/cellarbrain/: __init__.py  __main__.py  _query_base.py  anomaly.py  backup.py  cli.py  companion_markdown.py  computed.py  digest.py  dinner.py  doctor.py  dossier_ops.py  education.py  flat.py  gifting.py  hybrid_pairing.py  incremental.py  info.py  log.py  markdown.py  mcp_responses.py  mcp_server.py  migrate.py  observability.py  pairing.py  parsers.py  phonetic.py  price.py  query.py  query_cache.py  reader.py  reader_protocol.py  recommend.py  search.py  (+11 more)
tests/: conftest.py  dataset_factory.py  test_anomaly.py  test_backup.py  test_catalogue.py  test_cli.py  test_companion_markdown.py  test_computed.py  test_coop_parser.py  test_dashboard_actions.py  test_dashboard_app.py  test_dashboard_cellar.py  test_dashboard_dossier.py  test_dashboard_ingest.py  test_dashboard_pairing.py  test_dashboard_queries.py  test_dashboard_sidecars.py  test_dashboard_workbench.py  test_dataset_factory.py  test_denner_parser.py  test_digest.py  test_dinner.py  test_doctor.py  test_dossier_ops.py  test_education.py  test_email_poll.py  test_flat.py  test_gifting.py  test_hybrid_pairing.py  test_incremental.py  test_info.py  test_integration.py  test_integration_install.py  test_kapweine_parser.py  test_log.py  test_markdown.py  test_mcp_responses.py  test_mcp_server.py  test_migrate.py  test_millesima_parser.py  (+31 more)
(+194 files in other folders)
