[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cellarbrain"
version = "0.1.0"
description = "AI sommelier for your wine cellar — ETL pipeline, DuckDB query layer, Markdown dossiers, and MCP server for wine cellar CSV exports"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Urban Busslinger", email = "urbanb@me.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Environment :: Console",
]
dependencies = [
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "pandas>=2.0",
    "tabulate>=0.9",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
research = [
    "httpx>=0.27",
]
sommelier = [
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.7",
    "datasets>=2.0",
    "accelerate>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/urban-buss/cellarbrain"
Issues = "https://github.com/urban-buss/cellarbrain/issues"
Changelog = "https://github.com/urban-buss/cellarbrain/blob/main/CHANGELOG.md"

[project.scripts]
cellarbrain = "cellarbrain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
